# iso26262-llm-test-framework-update-2026

./: AGENTS.md  CMakeLists.txt  README.md  REPLICATION_PLAN.md
baseline/Lab/: CMakeLists.txt  boolean_algebra.cpp  math_lib.cpp  real_world.cpp
baseline/Lab/includes/: boolean_algebra.h  math_lib.h  real_world.h
cmake/: LocalGTest.cmake
docs/: BASELINE_ARTIFACT_INVENTORY.md  BASELINE_IMPORT_LOG.md  BASELINE_IMPORT_PLAN.md  BASELINE_MAPPING.md  BASELINE_STATUS.md  BASELINE_VS_UPDATE2026_PRELIM_COMPARISON.md  COMPARABILITY_ASSESSMENT.md  COVERAGE_ENABLEMENT.md  COVERAGE_EXECUTION_REPORT.md  EVIDENCE_LOGGING.md  EXPERIMENT_MATRIX.md  FAILURE_TAXONOMY.md  FIRST_BASELINE_RUN_PLAN.md  FIRST_BASELINE_RUN_REPORT.md  FIRST_GENERATION_EVIDENCE.md  FIRST_UPDATE2026_COMPARISON_SCOPE.md  FIRST_UPDATE2026_EXECUTION_REPORT.md  FIRST_UPDATE2026_FAILURE_ANALYSIS.md  FROZEN_BASELINE_INPUTS.md  IMPORT_SEQUENCE.md  KNOWN_BLOCKERS.md  PAPER_TO_REPO_MAPPING.md  PROMPT_VERSIONING.md  README.md  REPLICATION_SPEC.md  THREATS_TO_VALIDITY.md  UPDATE2026_TOOLING_DEVIATIONS.md  UPDATE_2026_RUN_PREREQUISITES.md
prompts/: README.md
results/: README.md
results/dry-run-boolean-a-001/: commands.sh  metadata.env
results/first_baseline_run/: FROZEN_INPUT_MANIFEST.md  commands.sh  coverage.html  metadata.env  raw_model_output.txt
results/first_update2026_run/: commands.sh  coverage.html  generated_test_file.cpp  metadata.env  prompt.txt  raw_model_output.txt
results/first_update2026_run/.coverage_tmp/: gtest.h.gcov  (+14 more)
scripts/: run_first_baseline.sh
tests/: supplemental_all_cpp_tests.cpp
(+2 files in other folders)
